# mcp-adapter

./: Dockerfile  Dockerfile-release  Makefile  README.md  pyproject.toml
src/mcp_adapter/: adapter.py  openapi.py  server.py  tool.py  watcher.py
src/samples/: openapi-v2-30009.json  openapi-v3-30001.json  openapi-v3-30004.json  openapi-v3-demo1.json  openapi-v3-demo2.json
